@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Jun 30 15:39:57 CEST 2006
-build.number=119
+#Thu Jul 06 20:20:25 CEST 2006
+build.number=120
