@@ -51,20 +51,20 @@ public class Tutorial09a
 
          // Attach a log Filter to the container
          LogFilter log = new LogFilter(myContainer, "com.noelios.restlet.example");
-         myContainer.attach(log);
+         myContainer.setRoot(log);
 
          // Attach a status Filter to the log Filter
          StatusFilter status = new StatusFilter(myContainer, true, "webmaster@mysite.org", "http://www.mysite.org");
-         log.attach(status);
+         log.setTarget(status);
 
          // Attach a guard Filter to the container
          GuardFilter guard = new GuardFilter(myContainer, "com.noelios.restlet.example", true, ChallengeSchemes.HTTP_BASIC , "Restlet tutorial", true);
          guard.getAuthorizations().put("scott", "tiger");
-         status.attach(guard);
+         status.setTarget(guard);
 
          // Create a host router matching calls to the server
          HostRouter host = new HostRouter(myContainer, 8182);
-         guard.attach(host);
+         guard.setTarget(host);
 
          // Create a directory Restlet able to return a deep hierarchy of Web files
          DirectoryHandler directory = new DirectoryHandler(myContainer, "file:///D:/Restlet/www/docs/api/", true, "index");
