@@ -11,6 +11,10 @@ Restlet changes log
  - Updated FreeMarker to version 2.3.7.
  - Updated Simple frameword to version 3.1.3.
  - Added Preference.toString() implementation based on patch submitted by Chris Winters.
+ - Renamed Filter.attach/detach to get/setTarget. Users won't assume that multiple targets can be attached, also the target can be looked up.
+ - Removed nextHandle() method from Handler and AbstractHandler. Didn't bring much value.
+ - Renamed RestletContainer.attach/detach into get/setRoot. 
+ - Fixed potential NPE in Reference.setHostName().
 
 1.0 beta 16 (2006-06-30)
  - Renamed attachPath() to attachRouter() in RouterBuilder.
